---
source: spade-tests/src/ast_lowering.rs
---
fn x() -> bool {true}

entity test() -> bool {
    inst x()
}

error: Unexpected `inst` for function call
  ┌─ testinput:4:5
  │
1 │ fn x() -> bool {true}
  │ -- x is defined as a function here
  ·
4 │     inst x()
  │     ^^^^ - Because x is a function
  │     │     
  │     Unexpected `inst`
  │
  = Consider removing the `inst`
  │
4 │     inst x()
  │     ----
